--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 
-<body class="debug">
+<body class="">
   <header class="container-fluid bg-primary text-center p-3 ">
     <h1 class="text-white">🍦 Ice Cream Parlor 🍦</h1>
   </header>
